--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 html {
-    font-size: 62.5%;
+    // font-size: 62.5%;
 }
 body {
     font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen-Sans, Ubuntu, Cantarell, helvetica neue,
