--- a/client/src/pages/GameCategory/GameNewReleases/styles.css
+++ b/client/src/pages/GameCategory/GameNewReleases/styles.css
@@ -1,51 +1,10 @@
-.pagination {
-    display: inline-block;
-    margin: 20px 0;
-    padding: 0;
-    list-style: none;
-}
-
-.pagination li {
-    display: inline;
-    margin-right: 10px;
-    padding: 5px 13px;
-    background-color: #333;
-    border-radius: 20px;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.pagination li:hover {
-    background-color: #555;
-}
-
-.pagination .active {
-    background-color: #007bff;
-}
-
-.pagination a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.pagination .previous,
-.pagination .next {
-    background-color: #000;
-    padding: 5px 15px;
-    border-radius: 20px;
-}
-
-.pagination .previous:hover,
-.pagination .next:hover {
-    background-color: #000;
-}
-.pagination .previous:hover a,
-.pagination .next:hover a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.pagination .break-me {
-    margin-right: 10px;
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin-top: 20px;
+  }
+  .pagination-container button{
+    background-color: #32373c;
+    border-radius: 44%;
 }
