--- a/client/src/pages/AppCategory/AppAllCategory/styles.css
+++ b/client/src/pages/AppCategory/AppAllCategory/styles.css
@@ -1,66 +1,26 @@
-.pagination {
-    display: inline-block;
-    margin: 20px 0;
-    padding: 0;
-    list-style: none;
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin-top: 20px;
+  }
+  .pagination-container button{
+    background-color: black;
+    border-radius: 44%;
 }
 
-.pagination li {
-    display: inline;
-    margin-right: 10px;
-    padding: 5px 13px;
-    background-color: #333;
-    border-radius: 20px;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-.list-inline-item a {
-    color: #000;
-    background-color: #fff;
-    padding: 8px 16px;
-    border-radius: 4px;
-    text-decoration: none;
+.categories-list button {
+  background-color: transparent; 
+  color: black; 
+  padding: 10px; 
+  margin-right: 10px;
+  margin-bottom: 10px;
+  transition: background-color 0.3s, color 0.3s; 
 }
 
-.list-inline-item a:hover {
-    background-color: #000;
-    color: #fff;
-    border-radius: 20px;
-    text-decoration: none;
+.categories-list button.active {
+  background-color: black; 
+  color: #fff; 
 }
 
 
-.pagination li:hover {
-    background-color: #555;
-}
-
-.pagination .active {
-    background-color: #007bff;
-}
-
-.pagination a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.pagination .previous,
-.pagination .next {
-    background-color: #000;
-    padding: 5px 15px;
-    border-radius: 20px;
-}
-
-.pagination .previous:hover,
-.pagination .next:hover {
-    background-color: #000;
-}
-.pagination .previous:hover a,
-.pagination .next:hover a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.pagination .break-me {
-    margin-right: 10px;
-}
