--- a/client/src/pages/AppCategory/style.css
+++ b/client/src/pages/AppCategory/style.css
@@ -1,15 +1,14 @@
-.list-inline-item a {
-    color: #000;
-    background-color: #fff;
-    padding: 8px 16px;
-    border-radius: 4px;
-    text-decoration: none;
+.card:hover {
+    border: 1px solid #007bff; 
 }
 
-.list-inline-item a:hover {
-    background-color: #000;
-    color: #fff;
-    border-radius: 20px;
-    text-decoration: none;
+.nav-item a.nav-link {
+    background-color: transparent; 
+    color: black; 
+}
+
+.nav-item a.nav-link.active {
+    background-color: black; 
+    color: white; 
 }
 
