--- a/client/src/components/Layout/DefaultLayout/Header/styles.css
+++ b/client/src/components/Layout/DefaultLayout/Header/styles.css
@@ -60,6 +60,6 @@
         right: 0;
         bottom: 0;
         z-index: 1050;
-        background-color: rgba( 240, 248, 255, 1); 
+        background-color: white; 
     }
 }
